# SafaOS

./: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  FEATURES.md  LICENSE  README.md  build.rs  build.sh  init.sh  limine.conf  run.sh  test.sh
.github/workflows/: build.yml  build_x86_64.yml
Shell/: build.zig
Shell/src/: Lexer.zig  builtin.zig  environment.zig  main.zig  repl.zig
TestBot/: build.zig  build.zig.zon
TestBot/src/: main.zig
abi/: Cargo.toml  README.md
abi/src/: errors.rs  io.rs  lib.rs  syscalls.rs
abi/src/raw/: mod.rs  processes.rs
binutils/: Cargo.toml
binutils/src/: extra.rs
crates/: README.md
crates-user/: README.md
crates-user/majala/: Cargo.toml
crates-user/majala/src/: main.rs
crates-user/safa-binutils/: Cargo.toml  README.md
crates-user/safa-binutils/src/: extra.rs
crates-user/safa-binutils/src/extra/: json.rs  usb_json.rs
crates-user/safa-tests/: Cargo.toml
crates-user/safa-tests/src/: main.rs
crates/kernel/: Cargo.toml  build.rs  linker-aarch64.ld  linker-x86_64.ld  rust-toolchain.toml
crates/kernel/.cargo/: config.toml
crates/kernel/src/: debug.rs  eve.rs  globals.rs  limine.rs  logging.rs  main.rs  shared_mem.rs  sockets.rs  test.rs
crates/kernel/src/arch/: arch_utils.rs  mod.rs
crates/kernel/src/arch/aarch64/: cpu.rs  gic.rs  interrupts.rs  mod.rs  paging.rs  pci.rs  power.rs  registers.rs  serial.rs  tests.rs  threading.rs  timer.rs  utils.rs
crates/kernel/src/arch/aarch64/exceptions/: exceptions.s  mod.rs
crates/kernel/src/arch/aarch64/gic/: cpu_if.rs  gicd.rs  gicr.rs  mod.rs
crates/kernel/src/arch/aarch64/gic/gicr/: lpis.rs  mod.rs
crates/kernel/src/arch/aarch64/gic/its/: commands.rs  mod.rs
crates/kernel/src/arch/unsupported/: mod.rs  paging.rs  power.rs  serial.rs  threading.rs  utils.rs
crates/kernel/src/arch/x86_64/: acpi.rs  gdt.rs  mod.rs  paging.rs  pci.rs  power.rs  registers.rs  serial.rs  syscalls.rs  tests.rs  utils.rs
crates/kernel/src/arch/x86_64/interrupts/: apic.rs  handlers.rs  idt.rs  mod.rs  pit.rs  ps2.rs
crates/kernel/src/arch/x86_64/threading/: mod.rs  threading.asm
crates/kernel/src/devices/: framebuffer.rs  mod.rs  serial.rs  tty.rs
crates/kernel/src/devices/input/: keyboard.rs  mod.rs  mouse.rs
crates/kernel/src/drivers/: driver_poll.rs  framebuffer.rs  interrupts.rs  keymapper.rs  mod.rs  pci.rs  usb_mouse.rs  utils.rs  xhci.rs
crates/kernel/src/drivers/keyboard/: keys.rs  mod.rs  set1.rs  usb_kbd.rs
crates/kernel/src/drivers/pci/: extended_caps.rs  mod.rs  msi.rs
crates/kernel/src/drivers/vfs/: expose.rs  mod.rs  ramfs.rs  tests.rs
crates/kernel/src/drivers/vfs/procfs/: cpuinfo.rs  eve_journal.rs  generic_file.rs  init.rs  init_system.rs  kernelinfo.rs  meminfo.rs  mod.rs  tasks.rs  usbinfo.rs
crates/kernel/src/drivers/vfs/rodatafs/: cpuinfo.rs  eve_journal.rs  generic_file.rs  init_system.rs  kernelinfo.rs  meminfo.rs  mod.rs  processes.rs  tasks.rs  usbinfo.rs
crates/kernel/src/drivers/xhci/: devices.rs  extended_caps.rs  mod.rs  regs.rs  rings.rs  trb.rs  usb.rs  usb_device.rs  usb_endpoint.rs  usb_hid.rs  usb_interface.rs  utils.rs
crates/kernel/src/drivers/xhci/devices/: ctx.rs  device.rs  mod.rs
crates/kernel/src/drivers/xhci/rings/: command.rs  event.rs  mod.rs  transfer.rs  trbs.rs
crates/kernel/src/fs/: diriter.rs  file.rs  mod.rs
crates/kernel/src/memory/: buddy_allocator.rs  frame_allocator.rs  mod.rs  page_allocator.rs  paging.rs  proc_mem_allocator.rs  sorcery.rs
crates/kernel/src/process/: current.rs  mod.rs  resources.rs  spawn.rs  vas.rs
crates/kernel/src/scheduler/: cpu_context.rs  expose.rs  mod.rs  process.rs  process_list.rs  queue.rs  resources.rs  tests.rs
crates/kernel/src/syscalls/: ffi.rs  fs.rs  io.rs  mem.rs  mod.rs  process.rs  processes.rs  sockets.rs  thread.rs  utils.rs
crates/kernel/src/terminal/: framebuffer.rs  mod.rs
crates/kernel/src/thread/: current.rs  mod.rs
crates/kernel/src/threading/: cpu_context.rs  expose.rs  mod.rs  process.rs  queue.rs  resources.rs  task.rs  tests.rs
crates/kernel/src/utils/: alloc.rs  ansi.rs  bstr.rs  display.rs  dtb.rs  elf.rs  ffi.rs  locks.rs  mod.rs  path.rs  syscalls.rs  types.rs
crates/macros/src/: lib.rs  syscalls.rs
crates/safa-abi/: Cargo.toml
crates/safa-abi/src/: errors.rs  ffi.rs  input.rs  lib.rs  mem.rs  process.rs  sockets.rs  syscalls.rs
crates/safa-abi/src/ffi/: mod.rs  num.rs  option.rs  ptr.rs  slice.rs  str.rs
crates/safa-abi/src/raw/: io.rs  processes.rs
crates/utils/: Cargo.toml
crates/utils/src/: display.rs  syscalls.rs
kernel/: Cargo.toml  rust-toolchain.toml
kernel/src/: eve.rs  globals.rs  limine.rs  main.rs  test.rs
kernel/src/arch/: mod.rs
kernel/src/devices/: mod.rs  serial.rs  tty.rs
macros/src/: lib.rs
ramdisk-include/: logo.txt
safa-builder/: Cargo.toml  README.md
safa-builder/src/: lib.rs  main.rs
safa-runner/: Cargo.toml
safa-runner/src/: main.rs
src/: builder.rs  cli.rs  main.rs  test.rs
src/builder/: cargo.rs  make.rs  rustc.rs  utils.rs
std-c/: README.md
std-c/src/: heap.zig  root.zig
tests/src/: main.rs
utils/: Cargo.toml
utils/src/: ansi.rs  bstr.rs  display.rs  either.rs  errors.rs  io.rs  lib.rs  path.rs  syscalls.rs
(+60 files in other folders)
