[package]
name = "safa-helper"
version = "0.2.0"
edition = "2024"
description = "The SafaOS's build system and helper tools"

[lib]
name = "safa_builder"
path = "src/builder.rs"

[[test]]
name = "test"
path = "src/test.rs"
harness = false

[dependencies]
cargo_metadata = "0.19.2"
cfg-if = "1.0.0"
clap = { version = "4.5.37", features = ["derive"] }
curl = "0.4.47"
flate2 = "1.1.1"
serde = "1.0.219"
serde_json = "1.0.140"
tar = "0.4.44"
tempfile = "3.19.1"

[dev-dependencies]
