[package]
name = "safa-binutils"
version = "0.1.0"
edition = "2024"

[lib]
name = "extra"
path = "src/extra.rs"

[dependencies]
heapless = { version = "0.8.0", features = ["serde"] }
owo-colors = "4.2.0"
safa-api = { version = "0.3.0", features = ["std"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
