[workspace]
[package]
name = "kernel-snowball"
version = "0.3.0"
edition = "2021"

[dependencies]
noto-sans-mono-bitmap = { version = "0.3.0", features = ["size_20"] }

safa-utils = { path = "../utils" }
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
spin = { version = "0.9.8", default-features = false, features = [
    "lazy",
    "once",
] }
bitflags = "2.6.0"
macros = { path = "../macros" }
int-enum = "1.1"
heapless = { version = "0.8.0", features = ["serde"] }
limine = "0.3.0"
hashbrown = "0.15.2"

serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", git = "https://github.com/ObserverUnit/srede-json-frok", default-features = false, features = [
    "alloc",
] }

compile-time = "0.2"
slab = { version = "0.4", default-features = false }
thiserror = { version = "2.0.12", default-features = false }
lock_api = "0.4.12"
const-str = { version = "0.6.2", default-features = false }
cfg-if = "1.0.0"
compiler_builtins = "0.1.158"
hermit-dtb = "0.1.1"
modular-bitfield = "0.12.0"
[dev-dependencies]

[profile.dev]
panic = "abort"
opt-level = 2

[profile.release]
panic = "abort"
debug = 1
overflow-checks = true
